# pierro

./: Cargo.toml  LICENSE  README.md
examples/: docking.rs  test.rs  widget_gallery.rs
scripts/: update_phosphor_icons.py
src/: lib.rs
src/core/: app.rs  mod.rs  render_resources.rs
src/core/math/: axis.rs  color.rs  margin.rs  mod.rs  range.rs  rect.rs  ts_transform.rs  util.rs  vec2.rs
src/core/paint/: clip.rs  mod.rs  rect.rs  rect.wgsl  stroke.rs  text.rs  texture.rs  transform.rs  util.rs  window_config.rs
src/core/text/: font_atlas.rs  mod.rs
src/core/ui/: clipboard.rs  cursor.rs  layout.rs  memory.rs  mod.rs  paint.rs  style.rs  tree.rs
src/core/ui/input/: key.rs  mod.rs
src/icons/: icons.gen.rs  mod.rs
src/widget/: animation.rs  button.rs  checkbox.rs  collapsing_header.rs  context_menu.rs  dnd.rs  dropdown.rs  icon.rs  label.rs  layout.rs  lines.rs  margin.rs  menu.rs  mod.rs  scroll.rs  spacing.rs  tabs.rs  text_edit.rs  theme.rs
src/widget/docking/: command.rs  mod.rs  render.rs
