[package]
name = "pierro"
description = "An immediate mode UI library for Rust"
homepage = "https://github.com/cipollino-studio/pierro"
repository = "https://github.com/cipollino-studio/pierro"
readme = "README.md"

categories = ["gui"]
keywords = ["ui", "immediate-mode"]

version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
winit = "0.30.5"
wgpu = "22.1.0"
pollster = "0.3.0"
bytemuck = { version = "1.19.0", features = ["derive"] }
etagere = "0.2.13"
cosmic-text = "0.12.1"
ahash = { version = "0.8.11", features = ["std"], default_features = false }
arboard = "3.4.1"
image = "0.25.5"
